--- a/templates/web/pormibarrio/static/stats.html
+++ b/templates/web/pormibarrio/static/stats.html
@@ -3,14 +3,22 @@
 %]
 <div id="chart-options">
 	<form method="post" action="stats" enctype="application/x-www-form-urlencoded" accept-charset="utf-8">
-	    <label for="start_date">[% loc('Start Date:') %]</label>
-	    <input type="text" placeholder="[% loc('Click here or enter as dd/mm/yyyy') %]" name="start_date" id="start_date"
-	      value="[% start_date ? start_date.strftime( '%d/%m/%Y') : '' | html %]" />
+		<div class="stats-form stats-form-first">
+			<label for="start_date">[% loc('Start Date:') %]</label>
+		    <input type="text" placeholder="[% loc('Click here or enter as dd/mm/yyyy') %]" name="start_date" id="start_date"
+		      value="[% start_date ? start_date.strftime( '%d/%m/%Y') : '' | html %]" />
 
-	    <label for="end_date">[% loc('End Date:') %]</label>
-	    <input type="text" placeholder="[% loc('Click here or enter as dd/mm/yyyy') %]" name="end_date" id="end_date" size="5" value="[% end_date ? end_date.strftime( '%d/%m/%Y') : '' | html %]" />
-	    
-	    <input type="submit" name="getcounts"  size="30" id="getcounts" value="Get Count" />
+		    <label for="end_date">[% loc('End Date:') %]</label>
+		    <input type="text" placeholder="[% loc('Click here or enter as dd/mm/yyyy') %]" name="end_date" id="end_date" size="5" value="[% end_date ? end_date.strftime( '%d/%m/%Y') : '' | html %]" />
+		    
+		    <input class="btn-stats" type="submit" name="getcounts"  size="30" id="getcounts" value="Ingresar" />
+		</div>
+	    <div class="stats-form">
+		    <input class="btn-stats" type="submit" name="last_week" value="Última semana" />
+		    <input class="btn-stats" type="submit" name="last_month" value="Último mes" />
+		    <input class="btn-stats" type="submit" name="last_six_months" value="Últimos 6 meses" />
+		    <input class="btn-stats" type="submit" name="all" value="Desde el comienzo" />
+		</div>
 	</form>
 
 	[% IF errors %]
@@ -27,8 +35,10 @@
 
 <div id="download-data"></div>
 <div id="graphs" style="height: 400px">
-	<div id="graph-totals" style="height: 400px;" class="chart-group"></div>
-	<div id="graph-total-cat" style="height: 400px" class="chart-group"></div>
+	<div class="graph-totals-values" class="chart-group"></div>
+	<div id="graph-totals" style="height: 300px; width: 60%;" class="chart-group"></div>
+	<div id="graph-total-cat" style="height: 400px; width: 100%;" class="chart-group"></div>
+	<div id="graph-evolution" style="height: 400px; width: 100%;" class="chart-group"></div>
 	<div id="chart-subcat">
 		<select id="subcat-select"></select>
 	</div>
@@ -36,35 +46,42 @@
 </div>
 <script>
 
-[% IF statics_json %]
+[% IF stats_json %]
 	//Create main stats
-	var stats = [% statics_json %];
+	var stats = [% stats_json %];
+	$(".graph-totals-values").append($("<span class='values-titles'>"+stats.users+" usuarios*</span><span class='values-titles'>"+stats.total+" reportes</span><span>"+stats.fixed+" finalizados</span><span>"+stats.in_progress+" en progreso</span><span>"+stats.confirmed+" ingresados</span>"));
 	create_charts(stats, false);
 	var totals_csv = '"grupo","categoria","total_reportados","total_finalizados","total_en_progreso","total_ingresados"\r\n';
 	$.each(stats, function(gid,group){
-		//Create group structure
-		$("#graph-subcat").append($("<div>", {id: "group"+gid, class: "graph-group", style: "height: 400px;"}));
-		$("#group"+gid).append($("<div>", {id: "chart-cat"+gid, class: "chart-group", style: "height: 400px;"}));
-		$("#group"+gid).append($("<div>", {id: "chart-totals"+gid, class: "chart-group", style: "height: 400px;"}));
-		var data = [];
-		//Append option
-		$("#subcat-select").append($("<option>", {value: gid, text: group.name}));
-		
-		//Create chart
-		data.push('Desglose '+group.name);
-		data.push('Total de reportes enviados a la IM en '+group.name);
-		data.push("#chart-cat"+gid);
-		data.push('Totales en '+group.name);
-		data.push("#chart-totals"+gid);
-		create_charts(group, data);
+		if (typeof group.name != 'undefined'){
+			//Create group structure
+			$("#graph-subcat").append($("<div>", {id: "group"+gid, class: "graph-group", style: "height: 300px;"}));
+			$("#group"+gid).append($("<div class='graph-totals-values' class='chart-group'><h2>"+group.name+"</h2><span>"+group.fixed+" finalizados</span><span>"+group.in_progress+" en progreso</span><span>"+group.confirmed+" ingresados</span></div>"));
+			$("#group"+gid).append($("<div>", {id: "chart-cat"+gid, class: "chart-group", style: "height: 300px; width: 60%;"}));
+			$("#group"+gid).append($("<div>", {id: "chart-totals"+gid, class: "chart-group", style: "height: 300px; width: 100%;"}));
+			$("#group"+gid).append($("<div>", {id: "chart-evolution"+gid, class: "chart-group", style: "height: 300px; width: 100%;"}));
+			var data = [];
+			//Append option
+			$("#subcat-select").append($("<option>", {value: gid, text: group.name}));
+			
+			//Create chart
+			data.push('Desglose '+group.name);
+			data.push('Total de reportes enviados a la IM en '+group.name);
+			data.push("#chart-cat"+gid);
+			data.push('Totales en '+group.name);
+			data.push("#chart-totals"+gid);
+			data.push('Evolucion en '+group.name);
+			data.push("#chart-evolution"+gid);
+			create_charts(group, data);
 
-		//Create CSV
-		$.each(group, function(subcatname, subcat){
-			if( $.isPlainObject(subcat) ){
-				var line = gid+','+subcat.name+','+subcat.total+','+subcat.fixed+','+subcat.in_progress+','+subcat.confirmed;
-				totals_csv += line + '\r\n';
-			}
-		});
+			//Create CSV
+			$.each(group, function(subcatname, subcat){
+				if( $.isPlainObject(subcat) ){
+					var line = gid+','+subcat.name+','+subcat.total+','+subcat.fixed+','+subcat.in_progress+','+subcat.confirmed;
+					totals_csv += line + '\r\n';
+				}
+			});
+		}
 	});
 	//Ocultamos todos al principio salvo el primero
 	//Select options to change divs to be seen
@@ -105,12 +122,19 @@
 		var groups_fixed = [];
 		var groups_in_progress = [];
 		var groups_confirmed = [];
+		var groups_months = [% months_json %];
+		var groups_evol_totals = [];
+		var groups_evol_fixed = [];
+		var groups_evol_in_progress = [];
+		var groups_evol_confirmed = [];
 
 		var confirmed_title = 'Confirmados por categoría';
 		var confirmed_subtitle = 'Total de reportes enviados a la IM por categoría';
 		var confirmed_div = '#graph-totals';
 		var totals_title = 'Totales por categoría';
 		var totals_div = '#graph-total-cat';
+		var evolution_title = 'Evolución de reportes';
+		var evolution_div = '#graph-evolution';
 
 		if ( data ){
 			confirmed_title = data[0];
@@ -118,6 +142,8 @@
 			confirmed_div = data[2];
 			totals_title = data[3];
 			totals_div = data[4];
+			evolution_title = data[5];
+			evolution_div = data[6];
 		}
 		$.each(groups, function(gid,group){
 			if( $.isPlainObject(group) ){
@@ -126,6 +152,14 @@
 				groups_fixed.push(group.fixed);
 				groups_in_progress.push(group.in_progress);
 				groups_confirmed.push(group.confirmed);
+				if ( data ){
+					groups_evol_fixed = group.evolution.fixed;
+					groups_evol_in_progress = group.evolution.in_progress;
+					groups_evol_confirmed = group.evolution.confirmed;
+				}
+				else{
+					groups_evol_totals.push({name: group.name, data: group.evolution});
+				}
 			}
 		});
 	    $(confirmed_div).highcharts({
@@ -153,7 +187,7 @@
 	            data: groups_totals
 	        }]
 	    });
-	//Chart for group details
+		//Chart for group details
 	    $(totals_div).highcharts({
 	        chart: {
 	            type: 'bar'
@@ -189,14 +223,93 @@
 	            data: groups_confirmed
 	        }]
 	    });
+	    if ( data ){
+		    //Charts for evolution
+		    $(evolution_div).highcharts({
+		        chart: {
+		            type: 'area'
+		        },
+		        title: {
+		            text: evolution_title
+		        },
+		        xAxis: {
+		            categories: groups_months,
+		            tickmarkPlacement: 'on',
+		            title: {
+		                enabled: false
+		            }
+		        },
+		        yAxis: {
+		            title: {
+		                text: 'Reportes'
+		            },
+		        },
+		        tooltip: {
+		            shared: true,
+		            valueSuffix: ' reportes'
+		        },
+		        plotOptions: {
+		            area: {
+		                stacking: 'normal',
+		                lineColor: '#666666',
+		                lineWidth: 1,
+		                marker: {
+		                    lineWidth: 1,
+		                    lineColor: '#666666'
+		                }
+		            }
+		        },
+		        series: [{
+		            name: 'Finalizados',
+		            data: groups_evol_fixed
+		        }, {
+		            name: 'En progreso',
+		            data: groups_evol_in_progress
+		        }, {
+		            name: 'Iniciados',
+		            data: groups_evol_confirmed
+		        }]
+		    });
+		}
+		else {
+			$(evolution_div).highcharts({
+		        title: {
+		            text: evolution_title,
+		            x: -20 //center
+		        },
+		        xAxis: {
+		            categories: groups_months
+		        },
+		        yAxis: {
+		            title: {
+		                text: 'Reportes'
+		            },
+		            plotLines: [{
+		                value: 0,
+		                width: 1,
+		                color: '#808080'
+		            }]
+		        },
+		        tooltip: {
+		            valueSuffix: ' reportes'
+		        },
+		        legend: {
+		            layout: 'vertical',
+		            align: 'right',
+		            verticalAlign: 'middle',
+		            borderWidth: 0
+		        },
+		        series: groups_evol_totals
+		    });
+		}
 	}
 [% END %]
 
 $( document ).ready(function() {
-	$('.highcharts-series-group').click(function(e){
+	/*$('.highcharts-series-group').click(function(e){
 		e.preventDefault();
 		alert('CLICK!');
-	});
+	});*/
 	//$('.graph-group').hide();
 	//$("#group"+firstgid).show();
 
