--- a/templates/web/pormibarrio/auth/login_block.html
+++ b/templates/web/pormibarrio/auth/login_block.html
@@ -38,14 +38,16 @@
                 <label class="n inline" for="remember_me">[% loc('Keep me signed in on this computer') %]</label>
             </div>
             <input class="btn btn-block btn-reportar" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Access') %]">
+            [% IF one_time_login %]
             <a class="green send-password" href="#">[% loc('Have tou forgotten your password?') %]</a>
-            <div id="send-password">
+            <div id="send-password" style="display: none">
                 <input type="email" class="[% IF field_errors.email %] error [% END %]" name="login_email" id="login_email" placeholder="Correo electrónico *">
                 [% IF field_errors.login_email  %]
                     <p class="error-m">[% field_errors.login_email %]</p>
                 [% END %]
                 <button class="btn btn-block btn-green" type="submit" id="new_password_mail" name="email_sign_in" value='1'>Envíame instrucciones</button>
             </div>
+            [% END %]
             <p class="no-account">
                 ¿No utilizas redes sociales? No hay problema!<br>
                 <a class="green registrate" href="#">Regístrate aquí con tu mail</a>
