FAQ para defensoría y cambios en suscribe sin T&C

--- a/templates/web/pormibarrio/faq/faq-es.html
+++ b/templates/web/pormibarrio/faq/faq-es.html
@@ -33,6 +33,12 @@
                 	<dd>· <a href="#faq16" class="pregunta">¿Qué significan los estados que envía la IM?</a></dd>
                 	<dd>· <a href="#faq17" class="pregunta">¿Qué puedo reportar en cada categoría?</a></dd>
                 </dl>
+                <dl>
+                	<dt>Defensoría</dt>
+                	<dd>· <a href="#faq18" class="pregunta">¿Qué es la Defensoría del Vecino?</a></dd>
+                	<dd>· <a href="#faq19" class="pregunta">¿Qué tipo de asuntos atiende?</a></dd>
+                	<dd>· <a href="#faq20" class="pregunta">¿Cómo se inicia una consulta o reclamo?</a></dd>
+                </dl>
             </div>
         </div>
     </div>
@@ -264,6 +270,28 @@
 				<p>
 					<b>Grieta</b><br>
 					Hendidura alargada y poco profunda en la superficie del pavimento. Fisura estrecha producto de la separación de dos materiales.
+				</p>
+			</div>
+			<div class="respuesta" id="faq18">
+            	<h2>¿Qué es la Defensoría del Vecino?</h2>
+        		<p>
+					La Defensoría del Vecino es una Institución creada por decreto de la Junta Departamental de Montevideo, cuyo titular es votado/a por esta. Tiene como objetivos de su actuación “promover el respeto de los derechos humanos dentro del Departamento, el mejor cumplimiento de los servicios departamentales y/o municipales y el logro de una mayor transparencia y eficacia de la gestión del Gobierno Departamental”. Las funciones fundamentales de la institución son escuchar, investigar y sugerir soluciones a reclamos que los vecinos y vecinas de Montevideo tengan en relación al gobierno Departamental así como aportar al mejor conocimiento de determinadas temáticas en articulación con otras instituciones y realizar aportes a la normativa departamental.
+				</p>
+			</div>
+			<div class="respuesta" id="faq19">
+            	<h2>¿Qué tipo de asuntos atiende?</h2>
+        		<p>
+					Todas las consultas, reclamos y propuestas relacionadas a servicios que cumplen la Intendencia de Montevideo y los Municipios directa o indirectamente, exceptuando los que tienen que ver con la relación con sus funcionarios.
+				</p>
+			</div>
+			<div class="respuesta" id="faq20">
+            	<h2>¿Cómo se inicia una consulta o reclamo?</h2>
+        		<p>
+					1. Por nuestros teléfonos 2916 16 16 y 0800 1616 
+					2. En nuestras oficinas de Juan Carlos Gómez 1472, de lunes a viernes en el horario de 9 a 17hs.
+					3. En nuestra página Web completando el <a href"http://www.defensordelvecino.com.uy/reclamos/">formulario de reclamo</a>.
+					4. A través de nuestra Fanpage en Facebook: <a href="https://www.facebook.com/defensoriaMVD">Defensoría del Vecino</a>. 
+					5. A través de nuestro Twitter <a href="https://twitter.com/defensoriamvd">@defensoriamvd</a>. 
 				</p>
 			</div>
         </div>
