--- a/templates/web/pormibarrio/report/display.html
+++ b/templates/web/pormibarrio/report/display.html
@@ -46,7 +46,7 @@
                                 <input class="form-control"type="email" name="rznvy" id="alert_rznvy" value="[% email | html %]" size="30" placeholder="[% loc('Email') %]">
                                 <input type="hidden" name="id" value="[% problem.id %]">
                                 <input type="hidden" name="type" value="updates">
-                                <button class="btn btn-sky btn-small btn-comentar" type="submit">[% loc('Subscribe') %]</button>
+                                <button class="btn btn-sky btn-small btn-comentar" id="btn-suscribe" type="submit">[% loc('Subscribe') %]</button>
                             </div>
                         </form>
                     </div>
