Se sube header en version test, falta modificar 2 iconos

--- a/templates/web/pormibarrio/header.html
+++ b/templates/web/pormibarrio/header.html
@@ -124,8 +124,27 @@
                 <path class="path1" d="M3.375 19.718c-0.225 0-0.447-0.007-0.666-0.021l-1.209-0.075 1.065-0.58c1.003-0.547 1.797-1.419 2.259-2.476-2.037-1.359-3.201-3.358-3.201-5.526 0-3.923 3.884-7.115 8.659-7.115 3.573 0 6.792 1.819 8.075 4.545 2.3 0.522 3.888 2.235 3.888 4.217 0 1.304-0.678 2.505-1.873 3.339 0.268 0.554 0.7 1.010 1.237 1.301l1.069 0.579-1.213 0.075c-0.716 0.046-1.461-0.029-2.181-0.22-0.622-0.165-1.201-0.409-1.725-0.725-0.753 0.073-1.545 0.009-2.274-0.188-1.763 1.028-3.927 1.476-6.103 1.25-0.874 0.541-1.848 0.955-2.895 1.235-0.959 0.255-1.939 0.385-2.912 0.385zM10.282 4.623c-4.389 0-7.96 2.879-7.96 6.417 0 2.009 1.137 3.864 3.119 5.092l0.243 0.152-0.101 0.267c-0.363 0.967-0.964 1.811-1.736 2.459 0.756-0.036 1.515-0.153 2.261-0.351 1.021-0.271 1.965-0.681 2.806-1.214l0.105-0.067 0.123 0.015c2.108 0.243 4.227-0.195 5.915-1.218l0.131-0.081 0.149 0.045c0.72 0.214 1.519 0.275 2.266 0.191l0.123-0.015 0.104 0.067c0.49 0.309 1.041 0.547 1.635 0.705 0.305 0.082 0.614 0.139 0.924 0.173-0.337-0.354-0.603-0.774-0.778-1.241l-0.102-0.268 0.245-0.152c1.14-0.704 1.795-1.765 1.795-2.911 0-1.695-1.441-3.163-3.503-3.57l-0.178-0.036-0.075-0.167c-1.121-2.566-4.138-4.291-7.511-4.291z"></path>
                 <path class="path2" d="M21.058 17.995c-0.592 0-1.189-0.080-1.773-0.234-0.622-0.165-1.201-0.409-1.725-0.725-0.205 0.018-0.412 0.028-0.623 0.028-2.927 0-5.308-1.963-5.308-4.377s2.381-4.377 5.308-4.377c2.926 0 5.307 1.964 5.307 4.377 0 1.304-0.678 2.505-1.873 3.339 0.268 0.554 0.7 1.010 1.237 1.301l1.069 0.579-1.213 0.075c-0.133 0.007-0.268 0.013-0.406 0.013zM17.726 16.314l0.104 0.067c0.49 0.309 1.041 0.547 1.635 0.705 0.305 0.082 0.614 0.139 0.924 0.173-0.337-0.354-0.603-0.774-0.778-1.241l-0.102-0.268 0.245-0.152c1.14-0.704 1.795-1.765 1.795-2.911 0-2.028-2.068-3.678-4.611-3.678s-4.61 1.65-4.61 3.678c0 2.030 2.068 3.68 4.61 3.68 0.226 0 0.447-0.014 0.664-0.039l0.123-0.014z"></path>
             </g>
-        </defs>
-    </svg>
+            <g id="icon-stats">
+                <path class="path1" fill="white" d="M 27.00,0.00 C 27.00,0.00 27.00,27.00 27.00,27.00 27.00,27.00 0.00,27.00 0.00,27.00 0.00,27.00 0.00,17.00 0.00,17.00 0.00,17.00 6.00,17.00 6.00,17.00 6.00,17.00 7.00,26.00 7.00,26.00 7.00,26.00 7.00,14.00 7.00,14.00 7.00,14.00 13.00,14.00 13.00,14.00 13.00,14.00 12.00,26.00 12.00,26.00 12.00,26.00 15.00,26.00 15.00,26.00 15.00,26.00 14.00,6.00 14.00,6.00 14.00,6.00 20.00,6.00 20.00,6.00 20.00,6.00 21.00,26.00 21.00,26.00 21.00,26.00 21.00,0.00 21.00,0.00 21.00,0.00 27.00,0.00 27.00,0.00 Z" />
+            </g>
+            <g id="icon-lifeguard">
+    <path fill="#FFFFFF" d="M59.903,128.036C24.64,125.73-2.169,95.167,0.138,59.906C2.446,24.641,33.011-2.168,68.272,0.138
+        c35.261,2.309,62.071,32.872,59.763,68.136C125.727,103.536,95.163,130.345,59.903,128.036z M67.993,4.399
+        C35.079,2.246,6.551,27.267,4.396,60.184c-2.153,32.911,22.87,61.444,55.784,63.597c32.914,2.153,61.444-22.875,63.599-55.786
+        C125.932,35.082,100.907,6.552,67.993,4.399z"/>
+    <path fill="#FFFFFF" d="M61.766,99.575c-19.567-1.282-34.444-18.241-33.164-37.808C29.882,42.2,46.843,27.323,66.41,28.602
+        c19.566,1.282,34.441,18.244,33.161,37.811C98.291,85.98,81.331,100.854,61.766,99.575z M66.129,32.902
+        C48.932,31.778,34.026,44.85,32.901,62.049c-1.125,17.195,11.95,32.1,29.145,33.227C79.243,96.4,94.147,83.327,95.273,66.132
+        C96.4,48.933,83.324,34.029,66.129,32.902z"/>
+    <polygon fill="#FFFFFF" points="62.15,31.06 66.778,22.984 70.313,31.594     "/>
+    <polygon fill="#FFFFFF" points="65.997,97.539 61.369,105.613 57.834,97.007  "/>
+    <polyline fill="#FFFFFF" points="48.71,94.051 30.908,116.924 7.378,90.096 32.375,75.426     "/>
+    <polyline fill="#FFFFFF" points="79.642,35.218 98.813,11.149 122.341,37.974 95.979,53.842   "/>
+    <polyline fill="#FFFFFF" points="33.013,48.991 10.216,30.437 37.044,6.909 51.338,31.476     "/>
+    <polyline fill="#FFFFFF" points="93.417,80.875 116.791,99.254 89.964,122.782 74.792,97.214  "/>
+            </g>
+            </defs>
+        </svg>
     <div class="overlay" style="display: none"></div>
 	<div id="fb-root"></div>
 	<script>
@@ -175,8 +194,13 @@
             <ul class="list-unstyled l-calles">
             </ul>
             <!--/lista CALLES-->
-        
-        
+            <div id="stats-menu">
+                <a href="/stats">
+                    <svg class="icon icon-icono1" viewBox="0 0 24 24">
+                        <use xlink:href="#icon-stats"></use>
+                    </svg>
+                </a>
+            </div>
             <!--USER INFO-->
             <div class="info-user" id="info-user">
                 <!-- Vista logueado -->
@@ -194,19 +218,23 @@
                         [% END %]
                         [% c.user.name | html %]
                     </a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                        <!--<li>
-                            <a class="user-reportes" href="lista-reportes.php">
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel"> 
+                        <li>
+                            <a class="user-profile" href="/my">
+                                <svg class="icon icon-icono4" viewBox="0 0 24 24">
+                                    <use xlink:href="#icon-icono4"></use>
+                                </svg>
+                                Mi perfil
+                            </a>
+                        </li>
+                        <li>
+                            <a class="user-reportes" href="/stats">
                                 <svg class="icon icon-icono1" viewBox="0 0 24 24">
                                     <use xlink:href="#icon-icono1"></use>
                                 </svg> 
-                                    <p>Mis reportes</p>
-                                </a></li> 
-                        <li>
-                            <a class="user-profile" href="editar-perfil.php">
-                                <svg class="icon icon-icono4" viewBox="0 0 24 24">
-                                    <use xlink:href="#icon-icono4"></use></svg> Editar mi perfil</a>
-                        </li>-->
+                                Estadisticas
+                            </a>
+                        </li>
                         <li>
                             <a class="user-sesion" href="/auth/sign_out">
                                 <svg class="icon icon-icono2" viewBox="0 0 24 24">
@@ -220,11 +248,21 @@
                  <!-- /Vista logueado-->
                  [% ELSE %]
                  <!--Vista sin login-->
-                    <div class="list-inline user-log-on">
-                        <a class="user-name" href="#">
+                    <div class="list-inline dropdown user-log-on">
+                        <a data-toggle="dropdown" class="user-name" href="#">
                             <img class="img-circle" alt="" src="/cobrands/pormibarrio/images/no-profile-picture.jpg">Anonimo
                         </a>
-                        <li><a class="green" href="/auth">Inicia sesión ó Registrate</a></li>
+                        <a class="green" href="/auth">Inicia sesión ó Registrate</a>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                            <li>
+                                <a class="user-reportes" href="/stats">
+                                    <svg class="icon icon-icono1" viewBox="0 0 24 24">
+                                        <use xlink:href="#icon-icono1"></use>
+                                    </svg> 
+                                    Estadisticas
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 <!-- /Vista sin login-->
                  [% END %]
@@ -254,10 +292,10 @@
             <div class="navbar-collapse collapse">
                 <ul>
                     <li class="home"><a href="/"><span></span></a></li>
-                    <li class="reportar"><a href="javascript:void(0);" onclick="report(10000, 4)">Reportar</a></li>
-                    <li class="reportes"><a href="javascript:void(0);" onclick="report_list(10000, 2)">Reportes</a></li>
-                    <li class="help"><a href="http://datauy.uservoice.com/forums/233161-por-mi-barrio" target="_blank">Ayuda</a></li>
-                    <li class="doc-info"><a href="/faq">Preguntas</a></li>
+                    <li class="reportar"><a href="javascript:void(0);" onclick="report(10000, 4)"><svg class="icon icon-icono8" viewBox="0 0 24 24"><use xlink:href="#icon-icono8"></use></svg><span>Reportar</span></a></li>
+                    <li class="reportes"><a href="javascript:void(0);" onclick="report_list(10000, 2)"><svg class="icon icon-icono1" viewBox="0 0 24 24"><use xlink:href="#icon-icono1"></use></svg><span>Reportes</span></a></li>
+                    <li class="doc-info"><a href="/faq"><svg class="icon icon-icono3" viewBox="0 0 24 24"><use xlink:href="#icon-icono3"></use></svg><span>Preguntas</span></a></li>
+                    <li class="help"><a href="http://datauy.uservoice.com/forums/233161-por-mi-barrio" target="_blank"><svg class="icon icon-icono3" viewBox="0 0 24 24"><use xlink:href="#icon-lifeguard"></use></svg><span>Ayuda</span></a></li>
                 </ul>
                 <ul class="help-info">
                     <li class="data"><a href="http://datauy.org" target="_blank"></a></li>
