FAQ Defensoria y cambios en íconos de nav

--- a/templates/web/pormibarrio/faq/faq-es.html
+++ b/templates/web/pormibarrio/faq/faq-es.html
@@ -289,7 +289,7 @@
         		<p>
 					1. Por nuestros teléfonos 2916 16 16 y 0800 1616 
 					2. En nuestras oficinas de Juan Carlos Gómez 1472, de lunes a viernes en el horario de 9 a 17hs.
-					3. En nuestra página Web completando el <a href"http://www.defensordelvecino.com.uy/reclamos/">formulario de reclamo</a>.
+					3. En nuestra página Web completando el <a href="http://www.defensordelvecino.com.uy/reclamos/">formulario de reclamo</a>.
 					4. A través de nuestra Fanpage en Facebook: <a href="https://www.facebook.com/defensoriaMVD">Defensoría del Vecino</a>. 
 					5. A través de nuestro Twitter <a href="https://twitter.com/defensoriamvd">@defensoriamvd</a>. 
 				</p>
