--- a/templates/web/pormibarrio/header.html
+++ b/templates/web/pormibarrio/header.html
@@ -125,23 +125,14 @@
                 <path class="path2" d="M21.058 17.995c-0.592 0-1.189-0.080-1.773-0.234-0.622-0.165-1.201-0.409-1.725-0.725-0.205 0.018-0.412 0.028-0.623 0.028-2.927 0-5.308-1.963-5.308-4.377s2.381-4.377 5.308-4.377c2.926 0 5.307 1.964 5.307 4.377 0 1.304-0.678 2.505-1.873 3.339 0.268 0.554 0.7 1.010 1.237 1.301l1.069 0.579-1.213 0.075c-0.133 0.007-0.268 0.013-0.406 0.013zM17.726 16.314l0.104 0.067c0.49 0.309 1.041 0.547 1.635 0.705 0.305 0.082 0.614 0.139 0.924 0.173-0.337-0.354-0.603-0.774-0.778-1.241l-0.102-0.268 0.245-0.152c1.14-0.704 1.795-1.765 1.795-2.911 0-2.028-2.068-3.678-4.611-3.678s-4.61 1.65-4.61 3.678c0 2.030 2.068 3.68 4.61 3.68 0.226 0 0.447-0.014 0.664-0.039l0.123-0.014z"></path>
             </g>
             <g id="icon-stats">
-                <path class="path1" fill="white" d="M 27.00,0.00 C 27.00,0.00 27.00,27.00 27.00,27.00 27.00,27.00 0.00,27.00 0.00,27.00 0.00,27.00 0.00,17.00 0.00,17.00 0.00,17.00 6.00,17.00 6.00,17.00 6.00,17.00 7.00,26.00 7.00,26.00 7.00,26.00 7.00,14.00 7.00,14.00 7.00,14.00 13.00,14.00 13.00,14.00 13.00,14.00 12.00,26.00 12.00,26.00 12.00,26.00 15.00,26.00 15.00,26.00 15.00,26.00 14.00,6.00 14.00,6.00 14.00,6.00 20.00,6.00 20.00,6.00 20.00,6.00 21.00,26.00 21.00,26.00 21.00,26.00 21.00,0.00 21.00,0.00 21.00,0.00 27.00,0.00 27.00,0.00 Z" />
+                <rect x="0" y="17.3" class="st0" width="6" height="7.7"/>
+                <rect x="7" y="13.8" class="st0" width="6" height="11.2"/>
+                <rect x="0" y="25.9" class="st0" width="27" height="1.1"/>
+                <rect x="14" y="6" class="st0" width="6" height="19"/>
+                <rect x="21" y="0" class="st0" width="6" height="25"/>
             </g>
             <g id="icon-lifeguard">
-    <path fill="#FFFFFF" d="M59.903,128.036C24.64,125.73-2.169,95.167,0.138,59.906C2.446,24.641,33.011-2.168,68.272,0.138
-        c35.261,2.309,62.071,32.872,59.763,68.136C125.727,103.536,95.163,130.345,59.903,128.036z M67.993,4.399
-        C35.079,2.246,6.551,27.267,4.396,60.184c-2.153,32.911,22.87,61.444,55.784,63.597c32.914,2.153,61.444-22.875,63.599-55.786
-        C125.932,35.082,100.907,6.552,67.993,4.399z"/>
-    <path fill="#FFFFFF" d="M61.766,99.575c-19.567-1.282-34.444-18.241-33.164-37.808C29.882,42.2,46.843,27.323,66.41,28.602
-        c19.566,1.282,34.441,18.244,33.161,37.811C98.291,85.98,81.331,100.854,61.766,99.575z M66.129,32.902
-        C48.932,31.778,34.026,44.85,32.901,62.049c-1.125,17.195,11.95,32.1,29.145,33.227C79.243,96.4,94.147,83.327,95.273,66.132
-        C96.4,48.933,83.324,34.029,66.129,32.902z"/>
-    <polygon fill="#FFFFFF" points="62.15,31.06 66.778,22.984 70.313,31.594     "/>
-    <polygon fill="#FFFFFF" points="65.997,97.539 61.369,105.613 57.834,97.007  "/>
-    <polyline fill="#FFFFFF" points="48.71,94.051 30.908,116.924 7.378,90.096 32.375,75.426     "/>
-    <polyline fill="#FFFFFF" points="79.642,35.218 98.813,11.149 122.341,37.974 95.979,53.842   "/>
-    <polyline fill="#FFFFFF" points="33.013,48.991 10.216,30.437 37.044,6.909 51.338,31.476     "/>
-    <polyline fill="#FFFFFF" points="93.417,80.875 116.791,99.254 89.964,122.782 74.792,97.214  "/>
+                <path class="st0" d="M14.4,0C7-0.5,0.5,5.2,0,12.6S5.2,26.5,12.6,27S26.5,21.8,27,14.4S21.8,0.5,14.4,0z M14.3,0.9 c2.2,0.1,4.3,0.9,6,2l-3.2,4l0,0c-0.8-0.4-1.6-0.7-2.6-0.9L14,4.7L13.4,6c-0.9,0-1.8,0.2-2.6,0.5L8.2,2.1C10,1.2,12.1,0.8,14.3,0.9z M13.1,20.1c-3.6-0.2-6.4-3.4-6.1-7c0.2-3.6,3.4-6.4,7-6.1c3.6,0.2,6.4,3.4,6.1,7C19.8,17.6,16.7,20.3,13.1,20.1z M0.9,12.7 C1,10.6,1.7,8.6,2.7,6.9l4,3.3C6.4,11,6.1,12,6,13c-0.1,1.1,0.1,2.1,0.5,3.1L2,18.7C1.2,16.9,0.8,14.8,0.9,12.7z M4.1,21.8 C4,21.8,4,21.8,4.1,21.8L4.1,21.8z M12.7,26.1c-2.1-0.1-4.1-0.8-5.8-1.9l3.2-4.1c0.7,0.4,1.5,0.6,2.4,0.8l0.6,1.3l0.7-1.3 c0.8,0,1.5-0.1,2.2-0.4l2.6,4.5C16.7,25.8,14.7,26.2,12.7,26.1z M26.1,14.3c-0.1,2.3-0.9,4.3-2.1,6.1l-4-3.2c0.6-1,0.9-2.1,1-3.3 c0.1-1-0.1-2-0.4-2.9l0,0L25,8.4C25.8,10.2,26.2,12.2,26.1,14.3z"/>
             </g>
             </defs>
         </svg>
@@ -184,8 +175,8 @@
                         <input type="hidden" id="main-street-code" />
                         <input type="hidden" id="second-street-code" />
                     </div>
-                    <div class="form-group pull-right">
-                        <div class="btn btn-search pull-right" onclick="streetLocateSubmit()" >Buscar</div>
+                    <div class="form-group">
+                        <div class="btn btn-search" onclick="streetLocateSubmit()" >Buscar</div>
                     </div>
                 </form>
             </div>
@@ -196,7 +187,7 @@
             <!--/lista CALLES-->
             <div id="stats-menu">
                 <a href="/stats">
-                    <svg class="icon icon-icono1" viewBox="0 0 24 24">
+                    <svg class="icon icon-icono1" viewBox="-2 0 30 30">
                         <use xlink:href="#icon-stats"></use>
                     </svg>
                 </a>
@@ -228,14 +219,6 @@
                             </a>
                         </li>
                         <li>
-                            <a class="user-reportes" href="/stats">
-                                <svg class="icon icon-icono1" viewBox="0 0 24 24">
-                                    <use xlink:href="#icon-icono1"></use>
-                                </svg> 
-                                Estadisticas
-                            </a>
-                        </li>
-                        <li>
                             <a class="user-sesion" href="/auth/sign_out">
                                 <svg class="icon icon-icono2" viewBox="0 0 24 24">
                                     <use xlink:href="#icon-icono2"></use>
@@ -249,20 +232,10 @@
                  [% ELSE %]
                  <!--Vista sin login-->
                     <div class="list-inline dropdown user-log-on">
-                        <a data-toggle="dropdown" class="user-name" href="#">
+                        <a class="user-name" href="#">
                             <img class="img-circle" alt="" src="/cobrands/pormibarrio/images/no-profile-picture.jpg">Anonimo
                         </a>
                         <a class="green" href="/auth">Inicia sesión ó Registrate</a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                            <li>
-                                <a class="user-reportes" href="/stats">
-                                    <svg class="icon icon-icono1" viewBox="0 0 24 24">
-                                        <use xlink:href="#icon-icono1"></use>
-                                    </svg> 
-                                    Estadisticas
-                                </a>
-                            </li>
-                        </ul>
                     </div>
                 <!-- /Vista sin login-->
                  [% END %]
@@ -295,7 +268,7 @@
                     <li class="reportar"><a href="javascript:void(0);" onclick="report(10000, 4)"><svg class="icon icon-icono8" viewBox="0 0 24 24"><use xlink:href="#icon-icono8"></use></svg><span>Reportar</span></a></li>
                     <li class="reportes"><a href="javascript:void(0);" onclick="report_list(10000, 2)"><svg class="icon icon-icono1" viewBox="0 0 24 24"><use xlink:href="#icon-icono1"></use></svg><span>Reportes</span></a></li>
                     <li class="doc-info"><a href="/faq"><svg class="icon icon-icono3" viewBox="0 0 24 24"><use xlink:href="#icon-icono3"></use></svg><span>Preguntas</span></a></li>
-                    <li class="help"><a href="http://datauy.uservoice.com/forums/233161-por-mi-barrio" target="_blank"><svg class="icon icon-icono3" viewBox="0 0 24 24"><use xlink:href="#icon-lifeguard"></use></svg><span>Ayuda</span></a></li>
+                    <li class="help"><a href="http://datauy.uservoice.com/forums/233161-por-mi-barrio" target="_blank"><svg class="icon icon-icono3" viewBox="-2 0 30 30"><use xlink:href="#icon-lifeguard"></use></svg><span>Ayuda</span></a></li>
                 </ul>
                 <ul class="help-info">
                     <li class="data"><a href="http://datauy.org" target="_blank"></a></li>
