Se agrega listado de following en my, se corrigen temas de diseño y stats para mobile

--- a/templates/web/pormibarrio/auth/login_block.html
+++ b/templates/web/pormibarrio/auth/login_block.html
@@ -2,7 +2,7 @@
     <div class="bloque-sesion">
         <div class="ir" id="report-new-login">
             <h2>Accede a tu cuenta</h2>
-            <p>[% summary || "Login or signup to help impoving our city" %]</p>
+            <p>[% summary || loc("Login or signup to help impoving our city") %]</p>
         </div>
         <div class="form-group">
             [% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
@@ -39,7 +39,7 @@
             </div>
             <input class="btn btn-block btn-reportar" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Access') %]">
             [% IF one_time_login %]
-            <a class="green send-password" href="#">[% loc('Have tou forgotten your password?') %]</a>
+            <a class="green send-password" href="#">[% loc('Have you forgotten your password?') %]</a>
             <div id="send-password" style="display: none">
                 <input type="email" class="[% IF field_errors.email %] error [% END %]" name="login_email" id="login_email" placeholder="Correo electrónico *">
                 [% IF field_errors.login_email  %]
