--- a/templates/web/pormibarrio/header.html
+++ b/templates/web/pormibarrio/header.html
@@ -175,9 +175,7 @@
                         <input type="hidden" id="main-street-code" />
                         <input type="hidden" id="second-street-code" />
                     </div>
-                    <div class="form-group">
-                        <div class="btn btn-search" onclick="streetLocateSubmit()" >Buscar</div>
-                    </div>
+                    <div class="btn btn-search" onclick="streetLocateSubmit()" >Buscar</div>
                 </form>
             </div>
             
@@ -269,6 +267,7 @@
                     <li class="reportes"><a href="javascript:void(0);" onclick="report_list(10000, 2)"><svg class="icon icon-icono1" viewBox="0 0 24 24"><use xlink:href="#icon-icono1"></use></svg><span>Reportes</span></a></li>
                     <li class="doc-info"><a href="/faq"><svg class="icon icon-icono3" viewBox="0 0 24 24"><use xlink:href="#icon-icono3"></use></svg><span>Preguntas</span></a></li>
                     <li class="help"><a href="http://datauy.uservoice.com/forums/233161-por-mi-barrio" target="_blank"><svg class="icon icon-icono3" viewBox="-2 0 30 30"><use xlink:href="#icon-lifeguard"></use></svg><span>Ayuda</span></a></li>
+                    <li class="stats"><a href="/stats"><svg class="icon icon-stats" viewBox="-2 0 30 30"><use xlink:href="#icon-stats"></use></svg><span>Estadísticas</span></a></li>
                 </ul>
                 <ul class="help-info">
                     <li class="data"><a href="http://datauy.org" target="_blank"></a></li>
