Se arregla bug en formulario de reporte

--- a/templates/web/pormibarrio/report/new/fill_in_details_form.html
+++ b/templates/web/pormibarrio/report/new/fill_in_details_form.html
@@ -93,7 +93,7 @@
                         [% IF upload_fileid || report.photo %]
                             [% IF upload_fileid %]
                                 <img align="right" src="/photo/[% upload_fileid %].temp.jpeg" alt="">
-                                <input type="hidden" name="photo" value="[% photo %]">
+                                <input type="hidden" name="photo" value="[% upload_fileid %]">
                             [% END %]
 
                             <p>[% loc('You have already attached a photo to this report, attaching another one will replace it.') %]</p>
